# master-backend-rust

./: .dockerignore  .env.example  .gitignore  .json  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  test.py
.github/workflows/: build-and-deploy.yml  build.yml  deploy.yml  lint.yml  release.yml  setup.yml  test.yml
.postman/: api  api_8a464a5a-dd07-4ede-9832-d5da9ca101e7
compose/loki/: loki-config.yaml
compose/prometheus/: prometheus.yml
compose/promtail/: promtail-config.yaml
compose/traefik/: traefik.yml
migrations/2024-04-18-122252_initial/: down.sql  up.sql
migrations/2024-08-02-114025_initial/: down.sql  up.sql
migrations/2024-08-11-120853_email_confirmation/: down.sql  up.sql
migrations/2024-09-28-102954_initial/: down.sql  up.sql
src/: config.rs  main.rs  state.rs  swagger.rs
src/agent_api/: mod.rs  state.rs
src/agent_api/dto/: agent_response.rs  client.rs  client_stats.rs  mod.rs
src/agent_api/enums/: mod.rs  protocol.rs
src/agent_api/requests/: create_client.rs  delete_client.rs  get_client_stats.rs  login.rs  mod.rs
src/agent_api/state/: agent.rs  cookie.rs  mod.rs
src/agent_api/utils/: mod.rs
src/controllers/auth/: mod.rs  sign_in.rs
src/data/: mod.rs  schema.rs
src/data/enums/: config_status.rs  country.rs  device_status.rs  mod.rs  oauth_provider.rs  os.rs  protocol.rs  session_status.rs  user_status.rs
src/data/models/: classic_auth.rs  config.rs  device.rs  email_confirmation.rs  mod.rs  oauth.rs  server.rs  session.rs  user.rs
src/data/repositories/: config_repository.rs  device_repository.rs  mod.rs  server_repository.rs  session_repository.rs  user_repository.rs
src/dto/: mod.rs
src/dto/auth/: access_token.rs  mod.rs  refresh_token.rs  response.rs
src/dto/config/: mod.rs  model.rs
src/dto/device/: mod.rs  model.rs
src/dto/response/: error.rs  success.rs
src/dto/server/: mod.rs  model.rs
src/dto/session/: interface.rs  mod.rs  model.rs
src/enums/: auth_error.rs  device_error.rs  hash_error.rs  mod.rs  oauth_providers.rs
src/enums/errors/: mod.rs
src/extractors/: mod.rs
src/guards/auth/: access_token_guard.rs  mod.rs  refresh_token_guard.rs
src/handlers/: mod.rs
src/handlers/auth/: authorize.rs  change_password.rs  confirm_email.rs  logout.rs  mod.rs  refresh.rs  sign_in.rs  sign_up.rs
src/handlers/device/: get_devices.rs  mod.rs  revoke_device.rs
src/handlers/session/: close_session.rs  create_session.rs  get_history.rs  mod.rs
src/logger/: functions.rs  mod.rs
src/logger/enums/: handlers.rs  level.rs  mod.rs  service.rs
src/logger/transports/: console_transport.rs  http_transport.rs  mod.rs
src/logger/types/: mod.rs  request.rs  response.rs
src/middleware/: logging_middleware.rs  mod.rs
src/routers/: app_router.rs  auth_router.rs  device_router.rs  mod.rs  session_router.rs
src/services/: config_service.rs  device_service.rs  mod.rs  oauth_providers_service.rs  server_service.rs  session_service.rs  user_service.rs
src/services/config/: get_by_country.rs  mod.rs
src/services/config_service/: get_config_by_country.rs  mod.rs
src/services/device/: add.rs  get.rs  get_by_id.rs  get_many.rs  logout.rs  mod.rs  revoke.rs
src/services/device_service/: add_device.rs  check_logged_in_device.rs  get_device.rs  get_devices.rs  logout_device.rs  mod.rs
src/services/email/: confirm.rs  mod.rs  send_confirmation.rs
src/services/oauth_providers/: get_user_info_github.rs  get_user_info_google.rs  mod.rs
src/services/oauth_providers_service/: authorize_user.rs  get_user_info_discord.rs
src/services/session/: close.rs  close_by_id.rs  create.rs  get_history.rs  mod.rs
src/services/session_service/: close_session.rs  close_session_by_id.rs  create_session.rs  get_history.rs  mod.rs
src/services/user/: authorize.rs  change_password.rs  get_by_email.rs  get_by_id.rs  have_classic_auth.rs  mod.rs  sign_in.rs  sign_up.rs
src/services/user_service/: add_classic_auth.rs  add_oauth.rs  add_user.rs  (+5 more)
src/tests/: config.rs  mod.rs
src/utils/: hash.rs  mod.rs
traefik/: dynamic_conf.yml  traefik.yml
(+98 files in other folders)
