[package]
name = "helios-master-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
deadpool-diesel = { version = "0.4", features = ["postgres"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "uuid",
    "serde_json",
    "chrono",
] }
dotenvy = "0.15"
env_logger = "0.11"
jsonwebtoken = "9.3.0"
listenfd = "1.0.1"
log = "0.4"
once_cell = "1.19.0"
rand_core = { version = "0.6.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0.0"
tokio = { version = "1.0", features = ["macros", "macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
uuid = { version = "1.4", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
validator = { version = "0.18", features = ["derive"] }
