[package]
name = "helios-master-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "uuid",
    "serde_json",
    "chrono",
] }
dotenvy = "0.15"
http-body-util = "0.1.2"
http-serde = "2.1.1"
jsonwebtoken = "9.3.0"
log = "0.4"
metrics = { version = "0.23", default-features = false }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
mime = "0.3"
oauth2 = "4.1"
once_cell = "1.19.0"
openssl = "*"
rand_core = { version = "0.6.3", features = ["std"] }
reqwest = { version = "0.12.5", features = ["json"] }
resend-rs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
